--- a/App/backend/requirements.txt
+++ b/App/backend/requirements.txt
@@ -1,9 +1,14 @@
 blinker==1.7.0
 click==8.1.7
+dnspython==2.6.1
 Flask==3.0.2
 Flask-Cors==4.0.0
+Flask-PyMongo==2.3.0
+geographiclib==2.0
+geopy==2.4.1
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 pycryptodome==3.20.0
+pymongo==4.6.3
 Werkzeug==3.0.1
