--- a/App/backend/requirements.txt
+++ b/App/backend/requirements.txt
@@ -1,14 +1,137 @@
-blinker==1.7.0
-click==8.1.7
-dnspython==2.6.1
-Flask==3.0.2
+annotated-types==0.5.0
+Babel==2.8.0
+bcc==0.18.0
+bio==1.7.0
+biopython==1.83
+biothings-client==0.3.1
+blinker==1.4
+blis==0.7.10
+Brlapi==0.8.3
+catalogue==2.0.9
+certifi==2020.6.20
+chardet==4.0.0
+charset-normalizer==3.3.2
+chrome-gnome-shell==0.0.0
+click==8.0.3
+colorama==0.4.4
+command-not-found==0.3
+confection==0.1.3
+contourpy==1.1.1
+crypto==1.4.1
+cryptography==3.4.8
+cupshelpers==1.0
+cycler==0.12.1
+cymem==2.0.7
+dbus-python==1.2.18
+defer==1.0.6
+distro==1.7.0
+docker==7.0.0
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0-py3-none-any.whl
+Flask==2.0.1
 Flask-Cors==4.0.0
-Flask-PyMongo==2.3.0
-geographiclib==2.0
-geopy==2.4.1
-itsdangerous==2.1.2
-Jinja2==3.1.3
-MarkupSafe==2.1.5
-pycryptodome==3.20.0
-pymongo==4.6.3
-Werkzeug==3.0.1
+fonttools==4.43.1
+gmpy2==2.1.5
+gprofiler-official==1.0.0
+graminelibos==1.6.2
+hidpidaemon==18.4.6
+httplib2==0.20.2
+idna==3.3
+importlib-metadata==4.6.4
+itsdangerous==2.1.0
+jeepney==0.7.1
+Jinja2==3.1.2
+joblib==1.3.2
+jsonify==0.5
+kernelstub==3.1.4
+keyring==23.5.0
+kiwisolver==1.4.5
+langcodes==3.3.0
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+louis==3.20.0
+macaroonbakery==1.3.1
+MarkupSafe==2.1.3
+matplotlib==3.8.1
+meson==1.4.0
+more-itertools==8.10.0
+murmurhash==1.0.9
+mygene==3.2.2
+Naked==0.1.32
+netaddr==0.8.0
+netifaces==0.11.0
+nltk==3.8.1
+numpy==1.25.2
+oauthlib==3.2.0
+packaging==23.1
+pandas==2.2.2
+pathy==0.10.2
+phe==1.5.0
+Pillow==10.1.0
+platformdirs==4.2.0
+pooch==1.8.1
+pop-transition==1.1.2
+preshed==3.0.8
+protobuf==3.12.4
+pycairo==1.20.1
+pycryptodome==3.19.0
+pycups==2.0.1
+pydantic==2.3.0
+pydantic_core==2.6.3
+pydbus==0.6.0
+pyelftools==0.27
+PyGObject==3.42.1
+pyinotify==0.9.6
+PyJWT==2.3.0
+pymacaroons==0.13.0
+PyNaCl==1.5.0
+pyOpenSSL==21.0.0
+pyparsing==2.4.7
+pyRFC3339==1.1
+python-apt==2.4.0+ubuntu3
+python-dateutil==2.8.2
+python-debian==0.1.43+ubuntu1.1
+python-gnupg==0.4.8
+python-xlib==0.29
+pytz==2022.1
+pyxdg==0.27
+PyYAML==5.4.1
+regex==2023.8.8
+repolib==2.2.1
+repoman==1.4.0
+requests==2.31.0
+scikit-learn==1.3.2
+scipy==1.11.3
+screen-resolution-extra==0.0.0
+SecretStorage==3.3.1
+sessioninstaller==0.0.0
+shellescape==3.8.1
+simplejson==3.17.6
+six==1.16.0
+sklearn==0.0.post11
+smart-open==6.4.0
+spacy==3.6.1
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.7
+systemd-python==234
+tenseal==0.3.14
+thinc==8.1.12
+threadpoolctl==3.2.0
+tomli==2.0.1
+tomli_w==1.0.0
+tqdm==4.66.1
+typer==0.9.0
+typing_extensions==4.7.1
+tzdata==2024.1
+ubuntu-drivers-common==0.0.0
+ubuntu-pro-client==8001
+ufw==0.36.1
+urllib3==1.26.5
+wadllib==1.3.6
+wasabi==1.1.2
+Werkzeug==2.0.2
+xdg==5
+xkit==0.0.0
+zipp==1.0.0
